--- a/.tekton/sealights-poc-odh-dashboard-v2-16-pull-request.yaml
+++ b/.tekton/sealights-poc-odh-dashboard-v2-16-pull-request.yaml
@@ -23,11 +23,11 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/rhoai-tenant/sealights-poc-odh-dashboard-v2-16:on-pr-{{revision}}
+    value: quay.io/ckhordiasma/sealights-poc-odh-dashboard:{{revision}}
   - name: image-expires-after
     value: 5d
   - name: dockerfile
-    value: Dockerfile.konflux
+    value: Dockerfile.konflux.sealights
   - name: path-context
     value: .
   - name: prefetch-input
@@ -234,6 +234,8 @@ spec:
         workspace: netrc
     - name: build-container
       params:
+      - name: ADDITIONAL_SECRET
+        value: sealights-credentials 
       - name: IMAGE
         value: $(params.output-image)
       - name: DOCKERFILE
