--- a/.tekton/sealights-poc-odh-dashboard-v2-16-pull-request.yaml
+++ b/.tekton/sealights-poc-odh-dashboard-v2-16-pull-request.yaml
@@ -32,6 +32,15 @@ spec:
     value: .
   - name: prefetch-input
     value: [{"type": "npm", "path": "."}, {"type": "npm", "path": "frontend"}, {"type": "npm", "path": "backend"}]
+  taskRunSpecs:
+  - pipelineTaskName: build-container
+    stepSpecs:
+    - name: build
+      computeResources:
+        requests:
+          memory: 10Gi
+        limits:
+          memory: 10Gi
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
