--- a/.tekton/sealights-poc-odh-dashboard-v2-16-pull-request.yaml
+++ b/.tekton/sealights-poc-odh-dashboard-v2-16-pull-request.yaml
@@ -264,6 +264,7 @@ spec:
         - $(params.build-args[*])
         - "SEALIGHTS_BUILD_NAME=$(tasks.sealights-nodejs-instrumentation.results.sealights-build-name)"
         - "SEALIGHTS_BSID=$(tasks.sealights-nodejs-instrumentation.results.sealights-bsid)"
+        - "COMMIT={{revision}}"
       - name: BUILD_ARGS_FILE
         value: $(params.build-args-file)
       - name: SOURCE_ARTIFACT
